[package]
name = "gitbase"
version = "0.1.0"
edition = "2021"

[dependencies]
# coder
bech32 = "0.11.0"
sha3 = "0.10.0"
blake3 = "1.6.0"

# error
anyhow = "1.0.0"
error-stack = "0.5.0"
thiserror = "2.0.0"

# cli
clap = { version = "4.5.31", features = ["derive"] }

# structure
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"

# async
tokio = { version = "1.43.0", features = ["full"] }

# github
octocrab = "0.43.0"

# cache
lru = "0.13.0"

# env
dotenv_codegen = "0.15.0"

# time
chrono = "0.4.0"
